<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">405475516292685</string>
    <string name="app_name">Crosig</string>
    <string name="settings">Configurações</string>
    <string name='logout'>Deslogar</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="go_anonymous">Acesso anônimo</string>
    <string name="login_facebook">Entrar com Facebook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_problem_placeholder">Informe o título para buscar...</string>
    <string name="problem_name">Qual o problema? (Título)</string>
    <string name="problem_description">Informe uma descrição mais detalhada do problema, por favor =)</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">Crosig</string>
    <string name="action_example">ActionExample</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section1</string>
    <string name="title_section2">Section2</string>
    <string name="title_section3">Section3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_problem">Novo problema</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="take_picture">Tirar foto</string>
    <string name="title_activity_new_picture">NewPicture</string>
    <string name="select_problem_type">Tipo de problema...</string>
    <string name="hello_world">Hello world!</string>
    <string name="follow_problem">Seguir</string>
    <string name="retry">Repetir</string>
    <string name="next">Próximo</string>
    <string name="progress_dialog">Aguarde...</string>
    <string name="title_activity_view_problem">Observar problema</string>
    <string name="update_status_problem">Atualizar status</string>
    <string name="remove_problem">Remover</string>
    <string name="unfollow_problem">Não serguir</string>
    <string name="suggest_status_problem">Sugerir status</string>
    <string name="evaluate_problem">Avaliar</string>
    <string name="denounce_problem">Denunciar</string>
    <string name="comment_problem">Comentar</string>
    <string name="search">Buscar</string>
    <string name="title_activity_search">Buscar problema</string>
    <string name="delete_problem">Excluir</string>
    <string name="aguardando_resolucao">Aguardando resolução</string>
    <string name="resolucao_em_andamento">Resolução em andamento</string>
    <string name="problem_resolvido">Problema resolvido</string>
    <string name="comment">Comentar</string>
    <string name="comments">Comentários</string>
    <string name="notification">Notificação</string>
    <string name="profile_action">Perfil</string>
    <string name="title_activity_user_notification">Notificações</string>
    <string name="notifications">Notificações</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="reputation_double_dots">Reputação:</string>

</resources>
