<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gh.crosig.ViewProblem">

    <TextView android:id="@+id/view_problem_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/view_problem_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView android:id="@+id/view_problem_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.parse.ParseImageView
        android:id="@+id/view_problem_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/author_layout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:baselineAligned="true"
        android:clickable="false"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="invisible">

        <Button
            android:id="@+id/view_problem_update_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_status_problem" />

        <Button
            android:id="@+id/view_remove_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_problem" />

        <Button
            android:id="@+id/view_problem_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unfollow_problem"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_author_layout"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:baselineAligned="true"
        android:clickable="false"
        android:orientation="horizontal"
        android:padding="5dp"
        android:visibility="invisible">

        <Button
            android:id="@+id/view_problem_suggest_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/suggest_status_problem" />

        <Button
            android:id="@+id/view_problem_evaluate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/evaluate_problem" />

        <Button
            android:id="@+id/view_problem_denounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/denounce_problem"/>

        <Button
            android:id="@+id/view_problem_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/comment_problem"/>

    </LinearLayout>

</LinearLayout>
