<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gh.crosig.fragments.NewProblemDetails">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ScrollView01"
        android:name="com.gh.crosig.NewProblem"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        tools:layout="@layout/new_problem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/problem_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/problem_name" />

            <EditText
                android:id="@+id/problem_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/problem_description"
                android:inputType="textMultiLine"
                android:lines="5" />

            <Spinner
                android:id="@+id/problem_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:entries="@array/problem_types"
                android:prompt="@string/select_problem_type"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_gravity="bottom"
                android:baselineAligned="true"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/action_bar_button_cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="cancel"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/action_bar_button_ok"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="saveProblem"
                    android:text="@string/save" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
