<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_photo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.gh.crosig.fragments.NewPhoto"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1.00"
        android:layout_gravity="bottom">
        <com.parse.ParseImageView
            android:id="@+id/problem_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAlignBottom="false"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_photo_all_buttons"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:baselineAligned="true"
        android:clickable="false"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="takePicture"
            android:text="@string/retry" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="next"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>
